# Dining-Philosophers-ncurses

./: Fork.h  Philosopher.cpp  Philosopher.h  README.md  makefile
include/: Fork.h  Philosopher.h  Window.h
src/: CMakeLists.txt  Fork.cpp  Fork.h  Main.cpp  Philosopher.cpp  Philosopher.h  Window.cpp
